# kiliax

./: .gitignore  AGENTS.md  Cargo.toml  ENV.md  LICENSE  README.md  TODO.md  install.ps1  install.sh  kiliax.example.yaml  killiax.example.yaml
.cargo/: config.toml
.github/workflows/: build.yml  nonfunctional.yml
crates/kiliax-cli/: Cargo.toml
crates/kiliax-cli/src/: app.rs  daemon.rs  highlight.rs  history.rs  input.rs  main.rs  markdown.rs  mcp_picker.rs  model_picker.rs  server_run_args.rs  slash_command.rs  style.rs  terminal.rs  ui.rs  wrap.rs
crates/kiliax-cli/src/app/: history_nav.rs  mod.rs  preamble.rs  render.rs  stream.rs  submissions.rs  tokens.rs
crates/kiliax-core/: Cargo.toml
crates/kiliax-core/benches/: core_hot_paths.rs
crates/kiliax-core/examples/: agent_loop.rs  chat_hello.rs  stream_chat.rs
crates/kiliax-core/prompts/: apply_patch_tool_instructions.md  build.md  explore.md  general.md  how_to_use_skills.md  master.md  plan.md  tools.md
crates/kiliax-core/prompts/compact/: summary_prefix.md
crates/kiliax-core/prompts/goal/: goal_continuation.md
crates/kiliax-core/prompts/ref/: apply_patch_tool_instructions.md
crates/kiliax-core/prompts/tools/: apply_patch.md  edit_file.md  write_file.md
crates/kiliax-core/src/: agents.rs  compact.rs  config.rs  history.rs  lib.rs  llm.rs  mcp_overrides.rs  paths.rs  prompt.rs  protocol.rs  runtime.rs  session.rs  telemetry.rs
crates/kiliax-core/src/agents/: custom.rs  explore.rs  general.rs  master.rs  mod.rs  plan.rs
crates/kiliax-core/src/llm/: anthropic.rs  api_errors.rs  byot.rs  openai_config.rs  openai_conv.rs  patches.rs
crates/kiliax-core/src/runtime/: streaming.rs  tool_calls.rs
crates/kiliax-core/src/tools/: builtin.rs  custom.rs  engine.rs  mcp.rs  mod.rs  policy.rs  skills.rs
crates/kiliax-core/src/tools/builtin/: apply_patch.rs  common.rs  edit_file.rs  file_tracker.rs  goal.rs  grep_files.rs  list_dir.rs  mod.rs  multi_agents.rs  read_file.rs  registry.rs  shell.rs  update_plan.rs  view_image.rs  web_search.rs  write_file.rs
crates/kiliax-llm/: Cargo.toml
crates/kiliax-llm/src/: anthropic.rs  api_errors.rs  byot.rs  lib.rs  openai_conv.rs  openai_responses.rs  patches.rs  telemetry.rs  tool_names.rs  types.rs
crates/kiliax-mcp/: Cargo.toml
crates/kiliax-mcp/src/: http_transport.rs  lib.rs  protocol.rs
crates/kiliax-mcp/templates/skills/call-kiliax/: SKILL.md
crates/kiliax-otel/: Cargo.toml
crates/kiliax-otel/src/: lib.rs  otlp.rs
crates/kiliax-server/: Cargo.toml  build.rs
crates/kiliax-server/src/: api.rs  domain.rs  error.rs  infra.rs  lib.rs  main.rs  openapi.rs  runner.rs  state.rs  tests.rs  web.rs
crates/kiliax-server/src/http/: headers.rs  mapper.rs  middleware.rs  mod.rs  openapi.rs  web.rs
crates/kiliax-server/src/http/handlers/: admin.rs  capabilities.rs  config.rs  custom_tools.rs  events.rs  fs.rs  mod.rs  runs.rs  sessions.rs  skills.rs
crates/kiliax-server/src/state/: domain.rs  live_session.rs  mod.rs  multi_agent.rs  preamble.rs  server_state.rs
crates/kiliax-tui/: Cargo.toml
crates/kiliax-tui/src/: app.rs  clipboard_paste.rs  custom_terminal.rs  daemon.rs  header.rs  highlight.rs  history.rs  input.rs  main.rs  markdown.rs  model_picker.rs  slash_command.rs  style.rs  terminal.rs  ui.rs  wrap.rs
docs/: 2026-04-03-refactor-report.md  2026-04-14-refactor-plan-high-cohesion.md  2026-04-15-live-session-dto-coupling.md  byot.md  design.md  openapi-session-control.yaml  otel-guide.md  otel.md  session-compaction.md  tooling.md  web-auth-security.md  web-ui-responsive.md
examples/agents/reviewer/: AGENT.yaml  PROMPT.md
examples/custom-tools/alert_ubuntu/: TOOL.yaml  tool.py
scripts/: check-release-tag.sh  release.sh  tag-release.sh  workspace-version.sh
scripts/perf/: server-api-load.sh  server-memory-pressure.sh
skills/call-kiliax/: SKILL.md
skills/kiliax-cli/: SKILL.md
skills/kiliax-cli/references/: cli.md  goals.md  http-api.md  remote.md  sessions-runs.md  skills.md  troubleshooting.md
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: web-ui.spec.ts
web/e2e/fixtures/: mock-kiliax.ts
web/src/: app.tsx  main.tsx  styles.css
web/src/components/: alert-stack.tsx  code-block.tsx  custom-tools-dialog.tsx  delete-session-dialog.tsx  delete-workspace-dialog.tsx  edit-message-dialog.tsx  empty-state.tsx  error-boundary.tsx  folder-picker.tsx  markdown.tsx  mcp-dialog.tsx  message-row.tsx  session-actions.tsx  session-item-row.tsx  settings-dialog.tsx  skills-dialog.tsx  virtualized-list.tsx  workspace-actions.tsx
web/src/components/ui/: action-sheet.tsx  alert.tsx  badge.tsx  button.tsx  dialog.tsx  input.tsx  separator.tsx  sheet.tsx  textarea.tsx
web/src/lib/: api.ts  app-utils.ts  auth.ts  preferences.ts  router.ts  session-utils.ts  types.ts  use-alerts.ts  use-ws-events.ts  workspace-utils.ts
