[workspace]
members = [
  "crates/kiliax-core",
  "crates/kiliax-otel",
  "crates/kiliax-cli",
  "crates/kiliax-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
