[package]
name = "kiliax"
edition.workspace = true
version.workspace = true

[dependencies]
kiliax-core = { path = "../kiliax-core" }
kiliax-mcp = { path = "../kiliax-mcp" }
kiliax-server = { path = "../kiliax-server" }
anyhow = "1"
dirs.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }

libc = "0.2"
getrandom = "0.2"

[dev-dependencies]
tempfile.workspace = true
