[package]
name = "kiliax-core"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-openai = { version = "0.28", features = ["byot"] }
async-trait = "0.1"
base64 = "0.22"
dirs.workspace = true
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
modelcontextprotocol-client = { version = "0.1.3", features = ["camel_case"] }
mcp-protocol = { version = "=0.2.6", features = ["camel_case"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"
secrecy = "0.10"
serde.workspace = true
serde_json = "1"
serde_yaml.workspace = true
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt", "sync", "process", "fs", "io-util", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
sha2 = "0.10"
tracing-opentelemetry = "0.32"

[dev-dependencies]
tempfile.workspace = true
