[package]
name = "kiliax-core"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
dirs.workspace = true
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
kiliax-llm = { path = "../kiliax-llm" }
modelcontextprotocol-client = { version = "0.1.3", features = ["camel_case"] }
mcp-protocol = { version = "=0.2.6", features = ["camel_case"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json = "1"
serde_yaml.workspace = true
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt", "sync", "process", "fs", "io-util", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
sha2 = "0.10"
tracing-opentelemetry = "0.32"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile.workspace = true
