[package]
name = "kiliax-llm"
edition.workspace = true
version.workspace = true

[dependencies]
async-openai = { version = "0.28", features = ["byot"] }
async-trait = "0.1"
base64 = "0.22"
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"
secrecy = "0.10"
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt", "sync", "fs"] }
tokio-stream = "0.1"
tracing = "0.1"
