[package]
name = "kiliax-mcp"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "net", "time"] }
