[package]
name = "kiliax-otel"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
gethostname = "0.5"
http = "1"
kiliax-core = { path = "../kiliax-core" }
opentelemetry = { version = "0.31", features = ["logs", "metrics", "trace"] }
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", features = [
  "grpc-tonic",
  "http-proto",
  "http-json",
  "logs",
  "metrics",
  "trace",
  "reqwest-blocking-client",
  "reqwest-rustls",
  "tls",
  "tls-roots",
] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31", features = [
  "logs",
  "metrics",
  "rt-tokio",
  "trace",
  "experimental_trace_batch_span_processor_with_async_runtime",
] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
