[package]
name = "kiliax-server"
edition.workspace = true
version.workspace = true

[dependencies]
kiliax-core = { path = "../kiliax-core" }
kiliax-otel = { path = "../kiliax-otel" }
anyhow = "1"
arc-swap = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
dirs = { workspace = true }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { workspace = true }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "fs", "io-util", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["yaml"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
