[package]
name = "kiliax-tui"
edition.workspace = true
version.workspace = true

[dependencies]
kiliax-core = { path = "../kiliax-core" }
anyhow = "1"
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
futures-util = "0.3"
pulldown-cmark = "0.13"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile.workspace = true
