[package]
name = "kiliax"
edition.workspace = true
version.workspace = true

[dependencies]
kiliax-core = { path = "../kiliax-core" }
anyhow = "1"
arboard = { version = "3", features = ["image-data"] }
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
pulldown-cmark = "0.13"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
syntect = "5"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
unicode-width = "0.2"
url = "2"

libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
getrandom = "0.2"
